# Mini-E-Commerce-Order-Processing

./: .env  pyproject.toml
backend/: main.py
backend/app/database/: connection.py
backend/app/models/: __init__.py  order_item_model.py  order_model.py  product_model.py  user_model.py
backend/app/routes/: order_route.py  product_route.py  user_route.py
backend/app/schemas/: order_schema.py  product_schema.py  user_schema.py
backend/app/services/: order_service.py  product_service.py  user_service.py
backend/app/utils/: id_service.py
frontend/: index.html  style.css
frontend/js/: api.js  main.js  orders.js  products.js  users.js
